--- a/style.css
+++ b/style.css
@@ -1,123 +1,89 @@
 * {
-
      margin:0;
-
      padding:0;
-
  }
-
 body {
-
     font-family: 'Josefin Sans', sans-serif;
-
 }
-
-div.page{
-
-    text-align:center;
-
-    animation:fade 1s 4s 1;
-
-    color:#263238;
-
-    animation-fill-mode:backwards;
-
-}
-
-img {
-
-    margin-top:45%;
-
-    width:30%;
-
-    margin-left: auto;
-
-    margin-right: auto;
-
-    opacity:0.9;
-
-}
-
-h1,p {
-
-    margin:5px;
-
-    padding:5px;
-
-}
-
-@keyframes fade {
-
-    0% {
-
-        opacity:0;
-
-        transform:scale(0.0);
-
-        margin-top:100%;
-
-    }
-
-    80% {
-
-        transform:scale(1.1);
-
-        margin-top:-5%;
-
-    }
-
-    100% {
-
-        transform:scale(1);
-
-    }
-
-}
-
 ul {
-
     position:absolute;
-
     top:50%;
-
     left:50%;
-
     transform:translate(-50%, -50%);
-
     list-style:none;
-
 }
-
 li {
-
     position:relative;
-
     width:10px;
-
     height:10px;
-
     margin:2px;
-
     display: inline-block;
-
     border-radius:50%;
-
     animation: animate 1s ease-in-out 5 alternate;
-
     animation-fill-mode:backwards;
-
     transform:translateY(5px);
-
     opacity:0;
-
 }
-
 ul li:nth-child(1){
-
     background:#4285f4;
-
     animation-delay:-1.75s;
-
+}
+ul li:nth-child(2){
+    background:#fbbc05;
+    animation-delay:-1.5s;
+}
+ul li:nth-child(3){
+    background:#ea4335;
+    animation-delay:-1.25s;
+}
+ul li:nth-child(4){
+    background:#34a853;
+    animation-delay:-1s;
+}
+@keyframes animate {
+    0% {
+        opacity:1;
+        transform:translateY(-10px);
+    }
+    100% {
+        opacity:1;
+        transform:translateY(5px);
+    }
+}
+div.page{
+    text-align:center;
+    animation:fadein 1s 4s 1;
+    color:#263238;
+    animation-fill-mode:both;
+    position:absolute ;
+}
+img {
+    width:90px;
+    opacity:0.9;
+}
+h1,p {
+    margin:5px;
+    padding:5px;
+}
+@keyframes fadein {
+    0% {
+        opacity:0;
+        transform: translate(-50%, -50%) scale(0.0);
+        top:0;
+        left:50%;
+    }
+    70% {
+        transform:scale(1.1) translate(-50%, -50%);
+        left:50%;
+    }
+    100% {
+        opacity:1;
+        transform:scale(1);
+        top:50%;
+        left:50%;
+        transform:translate(-50%, -50%);
+    }
+}
 }
 
 ul li:nth-child(2){
