--- a/style.css
+++ b/style.css
@@ -1,55 +1,592 @@
-* {
-     padding:0;
-     margin:0;
+@import url('https://fonts.googleapis.com/css?family=Poppins|Pacifico');
+
+body
+{
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+    background: #fff;
+    color: #000;
 }
-body {
-    font-family: 'Varela Round', sans-serif;
-    text-align:center;
-    animation:fadein 1s 1;
-    color:#380838;
-    animation-fill-mode:both;
-    position:relative;
-    background-color: #ffffff;
-background-image: url("data:image/svg+xml,%3Csvg width='80' height='80' viewBox='0 0 80 80' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.15'%3E%3Cpath d='M50 50c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10zM10 10c0-5.523 4.477-10 10-10s10 4.477 10 10-4.477 10-10 10c0 5.523-4.477 10-10 10S0 25.523 0 20s4.477-10 10-10zm10 8c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm40 40c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+header
+{
+    position: relative;
+    width: 100%;
+    margin: 0;
+    padding: 5px;
+    box-sizing: border-box;
+    animation: shadow 1.5s 2.5s 1;
+    animation-fill-mode: both;
+    z-index: 3;
 }
-img {
+@keyframes shadow
+{
+    from
+    {
+        box-shadow: none;
+    }
+    to
+    {
+        box-shadow: 0 2px 8px rgba(0,0,0,.2);
+        background: #fff;
+    }
+}
+.logo
+{
+    color: #03A9F4;
+    font-size: 23px;
+    font-family: 'Pacifico', cursive;
+    border-radius: 7px;
+    margin: 0px;
+    padding: 0 20px;
+    text-align: center;
+    box-sizing: border-box;
+    float: left;
+    -webkit-animation: rotateInDownLeft 1s 1s 1;
+    animation: rotateInDownLeft 1s 1s 1;
+    animation-fill-mode: both;
+    position: relative;
+    z-index: 3;
+    user-select: none;
+}
+
+/* Logo animation */
+
+@-webkit-keyframes rotateInDownLeft {
+  from {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: rotate3d(0, 0, 1, -45deg);
+    transform: rotate3d(0, 0, 1, -45deg);
+    opacity: 0;
+  }
+
+  to {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes rotateInDownLeft {
+  from {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: rotate3d(0, 0, 1, -45deg);
+    transform: rotate3d(0, 0, 1, -45deg);
+    opacity: 0;
+  }
+
+  to {
+    -webkit-transform-origin: left bottom;
+    transform-origin: left bottom;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+
+
+
+
+.logo:after
+{
+    content: ' v1.0';
+    color: #ccc;
+    font-size: 10px; 
+    transition: 1s;
+    animation: fadeIn 1.5s 2.8s 1;
+    animation-fill-mode: both;
+}
+@keyframes fadeIn
+{
+    from
+    {
+        opacity: 0;
+    }
+    to
+    {
+        opacity: 1;
+    }
+}
+
+
+/* Logo Hover Effect */
+
+@-webkit-keyframes hinge {
+  0% {
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  20%,
+  60% {
+    -webkit-transform: rotate3d(0, 0, 1, 80deg);
+    transform: rotate3d(0, 0, 1, 80deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  40%,
+  80% {
+    -webkit-transform: rotate3d(0, 0, 1, 60deg);
+    transform: rotate3d(0, 0, 1, 60deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 700px, 0);
+    transform: translate3d(0, 700px, 0);
+    opacity: 0;
+  }
+}
+
+@keyframes hinge {
+  0% {
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  20%,
+  60% {
+    -webkit-transform: rotate3d(0, 0, 1, 80deg);
+    transform: rotate3d(0, 0, 1, 80deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+  }
+
+  40%,
+  80% {
+    -webkit-transform: rotate3d(0, 0, 1, 60deg);
+    transform: rotate3d(0, 0, 1, 60deg);
+    -webkit-transform-origin: top left;
+    transform-origin: top left;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    opacity: 1;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 700px, 0);
+    transform: translate3d(0, 700px, 0);
+    opacity: 0;
+  }
+}
+.logo:hover
+{
+    -webkit-animation: hinge 2s;
+    animation: hinge 2s;
+}
+
+
+
+
+
+.clearfix
+{
+    clear: both;
+}
+nav
+{
+    float: left;
+    width: 100%;
+    height: 0;
+    opacity: 0;
+    margin-top: -50px;
+    transition: .4s ease;
+    overflow: hidden;
+}
+nav.active {
+    height: 90px;
+    opacity: 1;
+    margin-top: 2px;
+}
+nav ul
+{
+    margin: 0;
+    padding: 0;
+    display: block;
+}
+nav ul li
+{
+    list-style: none;
+}
+nav ul li a
+{
+    display: block;
+    margin: 0;
+    padding: 10px 20px;
+    border-radius: 4px;
+    text-decoration: none;
+    color: #03A9F4;
+    -webkit-transform: perspective(1px) translateZ(0); 
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
+}
+
+
+/* Nav Hover Effect */ 
+
+
+nav ul li a:before 
+{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #03A9F4;
+    border-radius: 4px;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+nav ul li a:hover, 
+nav ul li a:focus, 
+nav ul li a:active 
+{
+    color: white;
+}
+nav ul li a:hover:before, 
+nav ul li a:focus:before, 
+nav ul li a:active:before 
+{
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
+/* Hamburger Menu section */
+
+.menu-toggle
+{
+    width: 40px;
+    height: 40px;
+    margin-right: 2px;
+    cursor: pointer;
+    position: relative;
+    float: right;
+}
+.hamburger
+{
+    width: 25px;
+    height: 3px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: .2s;
+}
+.hamburger,
+.hamburger:before,
+.hamburger:after
+{
+    background: #03A9F4;
+    border-radius: 1px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
+}
+.hamburger:before,
+.hamburger:after
+{
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 3px;
+    transition: .5s;
+}
+.hamburger:before
+{
+    top: -8px;
+}
+.hamburger:after
+{
+    top: 8px;
+}
+.menu-toggle.active .hamburger
+{
+    background: rgba(0,0,0,0);
+    box-shadow: none;
+}
+.menu-toggle.active .hamburger:before
+{
+    top: 0;
+    transform: rotate(45deg);
+}
+.menu-toggle.active .hamburger:after
+{
+    top: 0;
+    transform: rotate(135deg);
+}
+
+
+
+/* About me section */
+
+.about
+{
+    margin: 15px;
+    padding: 10px;
+    background: #03A9F4;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.2);
+    z-index: 2;
+}
+
+
+/* My photo section */
+
+.about .card
+{
+    position: relative;
+    margin: auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transform-style: preserve-3d;
+    perspective: 600px;
+    transition: 0.5s;
+}
+.about .card .front img
+{
+    width: 100%;
+    border-radius: 50%;
+}
+.about .card .front
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    backface-visibility: hidden;
+    transform: rotateX(0deg);
+    transition: 0.5s;
+}
+.card:hover .front
+{
+    transform: rotateX(-180deg);
+}
+.about .card .back
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    backface-visibility: hidden;
+    transform: rotateX(180deg);
+    transition: 0.5s;
+}
+.card:hover .back
+{
+    transform: rotateY(0deg);
+}
+.about .card .back .details
+{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+}
+.about .card .back .details h2
+{
+    font-family: 'Pacifico', cursive;
+    font-weight: lighter;
+    font-size: 21px;
+    margin: 0;
+    padding: 0;
+    color: #03A9F4;
+}
+.about .card .back .social-icons
+{
+    padding: 10px 0;
+}
+.about .card .back .social-icons a
+{
+    display: inline-block;
+    width: 36px;
+    height: 36px;
+    text-align: center;
+    background: #03A9F4;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.about .card .back .social-icons a.fa
+{
+    line-height: 36px;
+}
+.about .card .back .social-icons a:hover,
+.about .card .back .social-icons a:focus,
+.about .card .back .social-icons a:active
+{
+    background: #E91E63;
+    color: #fff;
+}
+
+/* My Info section */
+
+.about .info
+{
+    font-size: 15px;
+    line-height: 24px;
+    padding: 10px;
+    color: #fff;
+    margin-bottom: 0;
+}
+.about .info a
+{
+    color: #fff;
+}
+.about .info strong
+{
+    color: bolder;
+}
+
+
+
+/* Footer section */
+
+footer
+{
+    width: 100%;
+    display: block;
+    background: #fff;
+    text-align: center;
+    margin: 0;
+    box-shadow: 0 -2px 5px rgba(0,0,0,.2);
+    color: #03A9F4;
+    transition: 1s;
+}
+.footer
+{
+    padding: 5px;
+}
+footer .contact
+{
+    margin: 10px;
+}
+hr
+{
+    border-width: 0.5px;
     width:150px;
-    position:relative;
-    animation:img 0.8s 0.5s 1;
-    animation-fill-mode:both;
+    border-color: #03A9F4;
+    opacity: 0.7;
+    margin-top: -25px;
+    margin-bottom: 11px;
 }
-h1 {
-    text-transform:uppercase ;
+.copyright
+{
+    font-size: 12px;
 }
-p {
-    font-size:13px;
+
+
+/* Social Icon Section */
+
+footer a
+{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    margin: 3px;
+    background: #03A9F4;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 50%;
+    transition: 0.5s;
 }
-@keyframes fadein {
-    0% {
-        opacity:0;
-        transform: scale(0);
-        top:-200px;
-    }
-    50% {
-        opacity:0.7;
-    }
-    70% {
-        transform: scale(1.1);
-    }
-    100% {
-        opacity:1;
-        transform:scale(1);
-        top:50px;
-    }
+footer a.fa
+{
+    line-height: 40px;
+    font-size: 20px;
 }
-@keyframes img {
-    0% {
-        transform: scale(0);
+
+/* Social Icon Hover */
+
+.fa:hover,
+.fa:focus,
+.fa:active
+{
+    background: #E91E63;
+}
+
+/* Text selection */
+
+::selection
+{
+    background: #039BE5;
+    color: #fff;
+}
+
+
+
+
+/* Responsive section */
+
+#notice
+{
+    display: none;
+}
+
+@media only screen and (min-width:768px)
+{
+    header,
+    .about,
+    footer
+    {
+        display: none !important;
     }
-    70% {
-        transform: scale(1.1);
-    }
-    100% {
-        transform: scale(1);
+    #notice
+    {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 4px;
+        border: 1px solid red;
+        color: red;
+        padding: 10px;
+        font-family: monospace;
+        user-select: none;
     }
 }
