--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
   --third-color: #607D8B;
   --fourth-color: #4CAF50;
   --first-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+  --background-image: url("images/background.png");
+  --background-opacity: .4;
   -webkit-scroll-behavior: smooth;
   scroll-behavior: smooth;
   -webkit-overscroll-scrolling: touch;
@@ -37,8 +39,8 @@ body:before
   bottom: 0;
   left: 0;
   right: 0;
-  background: url("images/background.png");
-  opacity: .4;
+  background: var(--background-image);
+  opacity: var(--background-opacity);
   z-index: -1;
   -webkit-animation: backgroundAnimate 25s infinite forwards;
   animation: backgroundAnimate 25s infinite forwards;
@@ -92,9 +94,6 @@ h1, h2
   -webkit-box-shadow: var(--first-shadow);
   box-shadow: var(--first-shadow);
   opacity: 0;
-  -webkit-transition: 1s;
-  -o-transition: 1s;
-  transition: 1s;
 }
 @-webkit-keyframes nameAnimate
 {
@@ -121,6 +120,80 @@ h1, h2
   }
 }
 
+/* Dark Mode */
+.navbar #darkMode
+{
+  position: fixed;
+  z-index: 98;
+  top: 5px;
+  right: 10px;
+  float: right;
+  margin: 0 5px;
+  width: 40px;
+  height: 40px;
+  padding: 1px;
+  background: var(--white);
+  border-radius: 50%;
+  -webkit-box-shadow: var(--first-shadow);
+  box-shadow: var(--first-shadow);
+  -webkit-transform: translateX(-50px);
+  -ms-transform: translateX(-50px);
+  transform: translateX(-50px);
+  opacity: 0;
+}
+.navbar #darkMode #darkModeIcon
+{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  color: var(--first-color);
+  font-size: 16px;
+}
+@-webkit-keyframes fadeIn2
+{
+  100%
+  {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translate(-50%, -50%) scale(.5);
+    transform: translate(-50%, -50%) scale(.5);
+  }
+}
+@keyframes fadeIn2
+{
+  100%
+  {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translate(-50%, -50%) scale(.5);
+    transform: translate(-50%, -50%) scale(.5);
+  }
+}
+@-webkit-keyframes fadeOut
+{
+  100%
+  {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translate(-50%, -50%) scale(1.5);
+    transform: translate(-50%, -50%) scale(1.5);
+  }
+}
+@keyframes fadeOut
+{
+  100%
+  {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translate(-50%, -50%) scale(1.5);
+    transform: translate(-50%, -50%) scale(1.5);
+  }
+}
+/* End Dark Mode */
+
 /* Hamburger Menu */
 .navbar .menu
 {
@@ -136,9 +209,6 @@ h1, h2
   margin: 0 10px;
   padding: 1px;
   opacity: 0;
-  -webkit-transition: 1s;
-  -o-transition: 1s;
-  transition: 1s;
   cursor: pointer;
 }
 .navbar .menu.clicked
@@ -154,8 +224,8 @@ h1, h2
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  width: 21px;
-  height: 2.3px;
+  width: 20px;
+  height: 2.2px;
   background: var(--first-color);
   -webkit-transition: .5s;
   -o-transition: .5s;
@@ -317,7 +387,6 @@ h1, h2
 .myphoto
 {
   display: block;
-  clear: right;
   width: 170px;
   height: 170px;
   border-radius: 50%;
@@ -327,6 +396,9 @@ h1, h2
   box-shadow: var(--first-shadow);
   margin: 20px auto;
   opacity: 0;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
 }
 @-webkit-keyframes zoomIn {
   from
@@ -825,13 +897,210 @@ h1, h2
 }
 /* End Copyright */
 
+/* Copyright */
+#preloader
+{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background: var(--white);
+  width: 100%;
+  height: 100vh;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: .5s .3s;
+  -o-transition: .5s .3s;
+  transition: .5s .3s;
+  pointer-events: none;
+}
+#preloader.finished
+{
+  opacity: 0;
+  visibility: hidden;
+  -ms-touch-action: none;
+  touch-action: none;
+}
+
+#preloader .text
+{
+  color: var(--second-color);
+  width: 90px;
+  text-align: center;
+  text-transform: uppercase;
+  display: inline-block;
+  margin-left: 5px;
+  font-family: Montserrat;
+}
+#preloader.finished .text
+{
+  margin-left: 0;
+}
+
+#preloader .bounceball
+{
+  position: relative;
+  display: inline-block;
+  height: 37px;
+  width: 15px;
+  margin: -2px auto;
+}
+#preloader .bounceball:before
+{
+  position: absolute;
+  content: '';
+  display: block;
+  top: 0;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: var(--second-color);
+  -webkit-transform-origin: 50%;
+  -ms-transform-origin: 50%;
+  transform-origin: 50%;
+  -webkit-animation: bounce 500ms alternate infinite ease;
+  animation: bounce 500ms alternate infinite ease;
+  -webkit-transition: .2s;
+  -o-transition: .2s;
+  transition: .2s;
+}
+
+@-webkit-keyframes bounce
+{
+  0%
+  {
+    top: 30px;
+    height: 5px;
+    border-radius: 60px 60px 20px 20px;
+    -webkit-transform: scaleX(2);
+    transform: scaleX(2);
+  }
+  35%
+  {
+    height: 15px;
+    border-radius: 50%;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+  100%
+  {
+    top: 0;
+  }
+}
+
+@keyframes bounce
+{
+  0%
+  {
+    top: 30px;
+    height: 5px;
+    border-radius: 60px 60px 20px 20px;
+    -webkit-transform: scaleX(2);
+    transform: scaleX(2);
+  }
+  35%
+  {
+    height: 15px;
+    border-radius: 50%;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+  100%
+  {
+    top: 0;
+  }
+}
+
+/* Toast */
+.toast
+{
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+  z-index: 999999;
+  width: 130px;
+  background: var(--white);
+  color: var(--black);
+  border-radius: 30px;
+  margin: 30px auto;
+  padding: 10px 13px;
+  text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  pointer-events: none;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
+  -webkit-animation: fadeInOut 2.5s 1 forwards;
+  animation: fadeInOut 2.5s 1 forwards;
+  -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.1);
+  box-shadow: 0 2px 5px rgba(0,0,0,.1)
+}
+@-webkit-keyframes fadeInOut
+{
+  0%
+  {
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+    opacity: 0;
+    visibility: hidden;
+  }
+  15%,50%
+  {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    opacity: 1;
+    visibility: visible;
+  }
+  85%,100%
+  {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes fadeInOut
+{
+  0%
+  {
+    -webkit-transform: translateY(100px);
+    transform: translateY(100px);
+    opacity: 0;
+    visibility: hidden;
+  }
+  15%,50%
+  {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    opacity: 1;
+    visibility: visible;
+  }
+  85%,100%
+  {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+/* End Toast */
+
 /* Targeted Element */
 :target
 {
-  -webkit-animation: targetedElmAnimate 1s 1s 3 !important;
-  animation: targetedElmAnimate 1s 1s 3 !important;
-  -webkit-animation-fill-mode: forwards !important;
-  animation-fill-mode: forwards !important;
+  -webkit-animation: targetedElmAnimate 1s 1s 3 forwards !important;
+  animation: targetedElmAnimate 1s 1s 3 forwards !important;
 }
 @-webkit-keyframes targetedElmAnimate
 {
